--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -3,6 +3,7 @@
         "home": "Home",
         "countdown": "Countdown",
         "about": "About",
+        "todolist": "TodoList",
         "welcome": " Welcome to Calculator Age",
         "select-age": "Choose your birth date"
     },
