--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -24,5 +24,23 @@
         "start": "Start",
         "pause": "Pause",
         "reset": "Reset"
+    },
+    "auth": {
+        "login": {
+            "header": "Login",
+            "email": "Email",
+            "password": "Password",
+            "remember": "Remember me",
+            "forgot-password": "Forgot password",
+            "not-member": "Not a member?"
+        },
+        "register": {
+            "header": "Register",
+            "email": "Email",
+            "name": "Name",
+            "password": "Password",
+            "remember": "Remember me",
+            "member": "Have an account? "
+        }
     }
 }
