--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -10,7 +10,8 @@
         "todo": {
             "history": "Lịch sử"
         },
-        "post": "Bài đăng"
+        "post": "Bài đăng",
+        "student": "Học sinh"
     },
     "calculator-age": {
         "content": "Bạn đã sống khoảng ",
