--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -11,7 +11,8 @@
             "history": "Lịch sử"
         },
         "post": "Bài đăng",
-        "student": "Học sinh"
+        "student": "Học sinh",
+        "calculator": "Máy tính"
     },
     "calculator-age": {
         "content": "Bạn đã sống khoảng ",
